test/fixtures/typecheck/fail/DuplicatePatternVariable.kite
module DuplicatePatternVariable

foo : Int -> Int -> Int
foo = x x -> x
